2013-07-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.dinamic.php: added default zoom
	buttom.
	
	* images/zoom_default.svg: the default buttom.

2013-07-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.dinamic.php: added the tooltips and
	only it needs reorganize the code.

2013-07-26  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.php: Fix errors
	on reports edition

2013-07-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_filemanager.php: Fixed file manager
	in metaconsole for bug #2361 and more little aesthetic fixes

2013-07-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.js: removed some changes.
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.dinamic.php,
	operation/agentes/networkmap.php: first version of dinamic view
	for networkmap. It needs implement tooltip and of course fix
	the new bugs.

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/configure_alert_template.php: Fix alert
	template hint javascript problem for bug #2357

	* godmode/massive/massive_edit_modules.php: Change 
	help tip to clarify user experience

2013-07-25 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* include/functions.php: Modified function get_user_language
	. if it's called from metaconsole then user lang can be
	updated (support for external hashed call to Pandora).
	
2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php: Move policy constants from
	functions_policy to constants file

	* godmode/massive/massive_edit_modules.php: Change the 
	values of link/unlink in massive modules to pending to 
	link/unlink. Its the correct way of do it

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_operations.php
	godmode/massive/massive_edit_modules.php: Added category