@@ -1,9 +1,9 @@
 <?php
 /*
-* @package Include /help/en
+* @package Include /help/ja
 */
 ?>
 
-<h1>Custom OID/Data #1-10</h1>
+<h1>カスタム OID/データ #1-10(Custom OID/Data #1-10)</h1>
 
-<p>These are regular expressions that try to match binding variables 1 to 10. If there is a match, the alert is fired. The value of the variable is stored in the corresponding _snmp_fx_ macro (_snmp_f1_, _snmp_f2_, ...). Even though only the first ten binding variables can be searched for matches, _snmp_fx_ macros are set for all of them (_snmp_f11_, _snmp_f12_, ...).</p>
+<p>マッチする正規表現で、1 から 10 まであります。マッチすると、アラートが発報されます。設定した値は、_snmp_fx_ マクロ(_snmp_f1_, _snmp_f2_,...)で利用できます。マッチング対象として利用できるのは最初の 10変数のみですが、マクロにはいくつでも(_snmp_f11_, _snmp_f12_, ...)指定できます。</p>
