@@ -1,3 +1,7 @@
+2013-07-28  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_field_match_snmp.php: Translated.
+
 2013-07-26 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/agentes/networkmap.dinamic.php: added default zoom
